[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atrium-streams-client = { path = "../../atrium-streams-client" }
futures = "0.3.30"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version = "1.36.0", features = ["full"] }