[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = { path = "../../atrium-api" }
atrium-repo = { path = "../../atrium-repo" }

anyhow = "1.0.80"
chrono = "0.4.34"
cid_old = { package = "cid", version = "0.10.1" }
cid = { package = "cid", version = "0.11.1" }
futures = "0.3.30"
ipld-core = { version = "0.4.1", default-features = false, features = ["std"] }
serde_ipld_dagcbor = { version = "0.6.0", default-features = false, features = ["std"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
trait-variant = "0.1.1"
