[package]
name = "video"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = { path = "../../atrium-api", features = ["agent"] }
atrium-xrpc-client = { path = "../../atrium-xrpc-client" }

clap.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_html_form = { version = "0.2.6", default-features = false }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
